<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ui.register.RegistrationActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp_50"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView7"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_25"
            android:background="@color/back_text_view"
            android:gravity="center"
            android:text="@string/registration"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            style="@style/EditTextStyleStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Введите Email"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/textView5"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_25"
            android:layout_marginRight="@dimen/dp_10"
            android:text="@string/pass"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16" />

        <EditText
            android:id="@+id/editTextTextPassword"
            style="@style/EditTextStyleStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Введите пароль"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/textView6"
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_25"
            android:layout_marginRight="@dimen/dp_10"
            android:text="@string/con_pass"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16" />

        <EditText
            android:id="@+id/editTextTextPassword_2"
            style="@style/EditTextStyleStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Подтвердите пароль"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button_register"
            style="@style/ButtonStyle"
            android:layout_width="@dimen/dp_360"
            android:layout_height="@dimen/dp_60"
            android:text="@string/register" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>