<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".StartActivity">

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginBottom="@dimen/dp_8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="395dp"
                android:layout_height="377dp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_25"
                android:layout_marginEnd="@dimen/dp_10"
                android:layout_marginBottom="@dimen/dp_25"
                android:foregroundGravity="center_vertical|clip_horizontal|center|center_horizontal"
                app:srcCompat="@drawable/logotip"
                tools:srcCompat="@drawable/logotip" />

            <TextView
                android:id="@+id/textView2"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/dp_10"
                android:text="@string/hello"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView4"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:gravity="center"
                android:text="@string/let_go"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/sp_20"
                android:textStyle="italic" />

            <Button
                android:id="@+id/auth_but"
                style="@style/ButtonStyle"
                android:layout_width="@dimen/dp_360"
                android:layout_height="60dp"
                android:text="@string/login" />

            <TextView
                android:id="@+id/textView"
                style="@style/TextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="или"
                android:textColor="#FEFEFE"
                android:textSize="16sp" />

            <Button
                android:id="@+id/reg_but"
                style="@style/ButtonStyle"
                android:layout_width="@dimen/dp_360"
                android:layout_height="60dp"
                android:text="@string/register" />

        </LinearLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>